--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </div>
             <div class="bottom">
                 <div class="social-links">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-discord"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+                    <a href="https://web.facebook.com/raymund.gorres.5" target="_blank"><i class="fa-brands fa-facebook" title="Facebook"></i></a>
+                    <a href="https://discord.gg/a5E9jzKm" target="_blank"><i class="fa-brands fa-discord" title="Discord"></i></a>
+                    <a href="https://github.com/Ray19-web" target="_blank"><i class="fa-brands fa-github" title="Github"></i></a>
+                    <a href="https://web.facebook.com/messages/t/100066267752997" target="_blank"><i class="fa-brands fa-facebook-messenger" title="Facebook Messenger"></i></a>
                 </div>
                 <button class="button">Contact Me</button>
             </div>
